# qemu-mcp-retro

./: INSTALL.md  README.md  pyproject.toml
qemu_mcp_retro/: server.py
